func: Add support for Java 11 and 17 (#58)